# bevy-i18n

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  README_CI.md  TODO.md  justfile
.github/workflows/: ci.yml  dependabot.yml  i18n.yml  release.yml
assets/locales/: en.yaml  zh.yaml
benches/: i18n_bench.rs
derive/: Cargo.toml
derive/src/: attr.rs  lib.rs
docs/: CI_CD.md  WORKFLOW.md
docs/superpowers/plans/: 2026-04-26-bevy-i18n-plan.md  2026-04-28-restructure-and-derive-plan.md
docs/superpowers/specs/: 2026-04-26-bevy-i18n-design.md  2026-04-28-restructure-and-derive-design.md
examples/: README.md  advanced_features.rs  basic.rs  custom_component.rs  demo.rs  locale_switch.rs
scripts/: extract-i18n.sh  validate-i18n.sh
src/: asset.rs  component.rs  interpolate.rs  lib.rs  plugin.rs  resource.rs  systems.rs
tests/: i18n_test.rs
